<?xml version="1.0"?>
<package>
  <name>talos_sensors</name>
  <version>1.0.2</version>
  <description>The sensors package</description>

  <maintainer email="noobaca2@gmail.com">Dash</maintainer>
  <license>BSD</license>
  <url type="website">http://openrobotics.ca</url>
  <author email="noobaca2@gmail.com">Devon Ash</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
